--- a/index.html
+++ b/index.html
@@ -7,24 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/dcc60407e2.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/bootstrap.css" class="css">
     <link rel="stylesheet" href="./css/style.css" class="css">
 
     <title>iOS to Android - Dhimaan</title>
 </head>
 
 <body>
-    <section class="container">
+    <section>
         <div class="top-nav">
-            <div class="navbar">
-                <h1>Dhimaan</h1>
-                <ul>
-                    <li><a href="#" class="active">Whatsapp</a></li>
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Snapchat</a></li>
-                </ul>
-                <a href="#" class="button"><span>Contact Us</span></a>
+            <div class="navbar container">
+                <div class="navbar-logo">
+                    <h1>Dhimaan</h1>
+
+                </div>
+                <div class="navbar-links text-center" id="navbar-links">
+                    <ul>
+                        <li><a href="#" class="active">Whatsapp</a></li>
+                        <li><a href="#">Instagram</a></li>
+                        <li><a href="#">Snapchat</a></li>
+                    </ul>
+                    <a href="#" class="button"><span>Contact Us</span></a>
+                </div>
+                <div class="toggel-icon " onclick="showMe()">
+                    <i class="fas fa-bars"></i>
+                </div>
             </div>
         </div>
     </section>
@@ -87,6 +95,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script>
+        function showMe() {
+            var foo = document.getElementById('navbar-links');
+
+            if (foo.style.display == '' || foo.style.display == 'none') {
+                foo.style.display = 'block';
+            }
+            else {
+                foo.style.display = 'none';
+            }
+        }
+    </script>
 
     <script>
 
