--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="m-5">
                 <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhB89NUJSHTgGq9JDkHtWJsKcEnexl3G0hHYJpwwm5vXVYp5j9eO53JDmnErKWsa-oFFB9hNpUK_H6jS6RW56_CgZ9domJi91KpD4KigsPPWr1kBzgQFRCmP19spl9lf5wNXH1CcKIK1dr5Iex9yZsUt4A2PuJ8kD7fESVYTUtG8Vnd3fwha8IH-VWsXQ=s1920"
-                    class="img-fluid" alt="ios image">
+                    class="img-fluid" alt="ios image" height="1080" width="1920">
             </div>
        
             <hr class="custom-line">
