--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="m-5">
                 <h1>iOS WhatsApp On Any Android</h1>
                 <hr class="custom-line">
-                <label class="m-2">Last Upadted: 26 Oct 2021</label>
+                <label class="m-2">Last Updated: 18 Dec 2021</label>
             </div>
             <div class="m-5">
                 <img src="https://blogger.googleusercontent.com/img/a/AVvXsEhuzdSKysx4EKRGNML8qg45SzsPYuNPwD7d081hxEzCqNm8m6oEo0PoE4oFu8ftg5EVs_f1xN8btyuCiwVLeOK4FGBzqtYSyoaSP7aTNX1b9hrZ1bIf4a3Zhvz457ak18CCBsHmEfjL83P2xEnDdh_JCG5JrewSPM_BRUbGyCuDSb9yquQAN4aC34dz_g=s1920"
